refactoring, update migrations
