# internal/auth/model.go
@@ -1,7 +1,5 @@
 package auth
 
-import "github.com/vetrovegor/kushfinds-backend/internal/user"
-
 type EmailRequest struct {
 	Email string `json:"email" validate:"required,email"`
 }
@@ -20,10 +18,19 @@ type Tokens struct {
 	RefreshToken string
 }
 
+type User struct {
+	ID            int     `json:"id"`
+	Email         string  `json:"email"`
+	Username      *string `json:"username"`
+	FirstName     *string `json:"firstName"`
+	LastName      *string `json:"lastName"`
+	Avatar        *string `json:"avatar"`
+	IsVerified    bool    `json:"isVerified"`
+	IsPasswordSet bool    `json:"isPasswordSet"`
+}
+
 type UserResponse struct {
-	// TODO: стоит создать отдельный User в котором будет не вся инфа
-	// в user.User убрать json теги
-	User user.User `json:"user"`
+	User User `json:"user"`
 }
 
 type AuthFullResponse struct {
